# starter-rust-crate

./: Cargo.toml  README.md  cspell.json
help/errors/: index.md
help/log/: index.md
help/tracing/: index.md
src/: main.rs
src/app/: args.rs  clap.rs  confy.rs  mod.rs  paths.rs  run.rs
